--- a/main.yml
+++ b/main.yml
@@ -127,8 +127,8 @@
       msg: "Either uncomment the postgres setup or manually login and initialize"
 
  # only run the next 2 tasks once!
-#  - name: initilize postgres
-#    command: postgresql-setup initdb
+  - name: initilize postgres
+    command: postgresql-setup initdb
 #  - name: initilize postgres some more
 #    command: chkconfig postgresql on
   - name: start postgres
@@ -150,7 +150,3 @@
     service:
       name: httpd
       enabled: yes
-#  - name: start apache
-#    service:
-#      name: httpd
-#      state: started
